Web Config: Added support for new error files
Also added ExamCrazy-NoAccess.aspx file in error folder.
Signed-off-by: NKK <nkk@gmail.com>

--- a/Web.config
+++ b/Web.config
@@ -53,9 +53,9 @@
             it enables developers to configure html error pages 
             to be displayed in place of a error stack trace.
         -->
-		<customErrors mode="Off" defaultRedirect="ExamCrazy-ErrorPage.aspx">
-			<error statusCode="403" redirect="ExamCrazy-NoAccess.aspx"/>
-			<error statusCode="404" redirect="ExamCrazy-FileNotFound.aspx"/>
+		<customErrors mode="Off" defaultRedirect="Error/ExamCrazy-ErrorPage.aspx">
+			<error statusCode="403" redirect="Error/ExamCrazy-NoAccess.aspx"/>
+			<error statusCode="404" redirect="Error/ExamCrazy-FileNotFound.aspx"/>
 		</customErrors>
 		<pages>
 			<controls>
