Registration: Bug Fix
Fixed lot of bugs in registration page
Signed-off-by: NKK <nkk@gmail.com>

--- a/ExamCrazy.csproj
+++ b/ExamCrazy.csproj
@@ -416,6 +416,7 @@
     <Content Include="imgsecuritycode.aspx" />
     <Content Include="js\Ajaxrequest.js" />
     <Content Include="js\jquery.datepick.js" />
+    <Content Include="js\jquery.min.js" />
     <Content Include="js\jquery.timePicker.js" />
     <Content Include="js\popupcalendarpicker.js" />
     <Content Include="js\validator.js" />
