--- a/Web.config
+++ b/Web.config
@@ -17,9 +17,12 @@
 					<section name="profileService" type="System.Web.Configuration.ScriptingProfileServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
 					<section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
 					<section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-				</sectionGroup>
+          
+
+        </sectionGroup>
 			</sectionGroup>
 		</sectionGroup>
+    <section name="rewriter" requirePermission="false" type="Intelligencia.UrlRewriter.Configuration.RewriterConfigurationSectionHandler, Intelligencia.UrlRewriter" />
 	</configSections>
 	<appSettings/>
 	<connectionStrings>
@@ -53,7 +56,7 @@
             it enables developers to configure html error pages 
             to be displayed in place of a error stack trace.
         -->
-		<customErrors mode="Off" defaultRedirect="Error/ExamCrazy-ErrorPage.aspx">
+		<customErrors mode="On" defaultRedirect="Error/ExamCrazy-ErrorPage.aspx">
 			<error statusCode="403" redirect="Error/ExamCrazy-NoAccess.aspx"/>
 			<error statusCode="404" redirect="Error/ExamCrazy-FileNotFound.aspx"/>
 		</customErrors>
@@ -71,6 +74,7 @@
 		</httpHandlers>
 		<httpModules>
 			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add name="UrlRewriter" type="Intelligencia.UrlRewriter.RewriterHttpModule, Intelligencia.UrlRewriter" />
 		</httpModules>
 		<!--
       <siteMap>
@@ -79,7 +83,9 @@
         </providers>
       </siteMap>
 -->
-	</system.web>
+    
+
+  </system.web>
 	<system.codedom>
 		<compilers>
 			<compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -112,8 +118,18 @@
 			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 		</handlers>
-	</system.webServer>
-	<runtime>
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="UrlRewriter" type="Intelligencia.UrlRewriter.RewriterHttpModule" />
+    </modules>
+
+    <validation validateIntegratedModeConfiguration="false" />
+
+  </system.webServer>
+  <rewriter>
+    <rewrite url="~/User/(.+)" to="~/User/__user.aspx?RequestedURL=$1" />
+  </rewriter>
+
+  <runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35"/>
