CSS: Java Scripts: Changes for new method for resolve url and new css
New css contentxd.css is added
in forgot password proper javascripts are also added

Signed-off-by: NKK <nkk@gmail.com>

--- a/ExamCrazy.csproj
+++ b/ExamCrazy.csproj
@@ -428,6 +428,7 @@
     <Content Include="AjaxRequest\AjaxRequest.aspx" />
     <Content Include="bin\Intelligencia.UrlRewriter.dll" />
     <Content Include="Control\DynamicTable.ascx" />
+    <Content Include="css\contentxd.css" />
     <Content Include="css\cssreciaspx.css" />
     <Content Include="css\jquery.datepick.css" />
     <Content Include="css\popupcalendarpicker.css" />
